# estrutura_workshop

./: .gitignore  README.md  pyproject.toml
app/pipeline/: extract.py
