[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "meu projeto de etl"
authors = ["Kevyn Nogueira <kevynnogueira@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
